<resources>
    <string name="app_name">Gurux DLMS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="obisCode">OBIS code</string>
    <string name="filter">Filter</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="startProtocol">Start Protocol</string>
    <string name="authentication">Authentication</string>
    <string name="password">Password</string>
    <string name="waittime">Wait time</string>
    <string name="clientAddress">Client Address</string>
    <string name="physicalAddress">Physical Address</string>
    <string name="logicalAddress">Logical Address</string>
    <string name="serialnumber">Serial number</string>
    <string name="error">Error</string>
    <string name="addressType">Address Type</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="read">Read</string>
    <string name="refresh">Refresh</string>
    <string name="showTrace">Show trace</string>
    <string name="invalidManufacturer">Select meter manufacturer first.</string>
    <string name="invalidSerialPort">Select serial port first.</string>
    <string name="pduHelp"># To convert Pdu to Xml:\n# Paste or type a PDU hex-string into the text area and then press the "To XML" button.\n# Example:\n601DA109060760857405080102BE10040E01000000065F1F0400180220FFFF</string>
    <string name="xmlHelp"># To convert Xml to Pdu:\n# Paste or type a Xml data to the text area and then press the "To PDU" button.</string>
    <string name="invalidWaitTime">Please enter the waittime higger than 2 second.</string>
    <string name="invalidClientAddress">Invalid client address.</string>
    <string name="invalidPhysicalServerAddress">Invalid physical server address.</string>
    <string name="invalidSerialNumber">Invalid serial number.</string>
    <string name="invalidLogicalServerAddress">Invalid logical server address.</string>
</resources>
